--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
+    "smooth-scrollbar": "^8.8.4",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
