--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "geist": "^1.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "smooth-scrollbar": "^8.8.4",
-    "vite-plugin-svgr": "^4.2.0"
+    "smooth-scrollbar": "^8.8.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+    "vite": "^5.1.6",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
